--- a/tptp/src/main/resources/static/assets/css/style.css
+++ b/tptp/src/main/resources/static/assets/css/style.css
@@ -66,6 +66,11 @@ h6 {
   opacity: 1;
 }
 
+.character {
+	  width:100%;
+	  height: 100%;
+	}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -645,6 +650,12 @@ section {
   background-color: #ffb727;
 }
 
+#ab-title {
+  font-color: #5d6a75;
+  font-size: 20px;
+  font-family: "Raleway", serif;
+}
+
 /*--------------------------------------------------------------
 # My Resume
 --------------------------------------------------------------*/
@@ -725,9 +736,9 @@ section {
   display: inline-block;
   text-align: center;
   border-radius: 50%;
-  width: 72px;
-  height: 72px;
-  background: #fff4df;
+  width: 200px;
+  height: 220px;
+  background: #ffffff;
 }
 
 .services .icon i {
